--- a/Aula6_a_8.ipynb
+++ b/Aula6_a_8.ipynb
@@ -3941,7 +3941,7 @@
       "metadata": {
         "id": "XuyATp2AtmV0"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3953,7 +3953,7 @@
       "metadata": {
         "id": "BWSF8AxDto9-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3965,7 +3965,7 @@
       "metadata": {
         "id": "lXHjo8ECtrIc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3977,7 +3977,7 @@
       "metadata": {
         "id": "bNgKKos5tt-S"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3993,7 +3993,7 @@
         "id": "Jmlwx2GJtxie",
         "outputId": "87bb532a-c95f-40e1-955d-2d02eb81245e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4019,12 +4019,12 @@
       "metadata": {
         "id": "q8EHD5fUumT_"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "kClFbpyooI4m"
       },
@@ -4048,7 +4048,7 @@
       "metadata": {
         "id": "V8F-SjwOor9h"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4112,7 +4112,7 @@
         "id": "FmIIx2rfpt4X",
         "outputId": "340a64c8-aa9d-41e8-cba6-a1365e8de688"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4185,7 +4185,7 @@
         "id": "hXnHhR7ypvd0",
         "outputId": "0a4fefd7-b2ac-4da2-fe3d-7838eca09ac8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4230,7 +4230,7 @@
       "metadata": {
         "id": "KwqeVhmWr_eZ"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4249,7 +4249,7 @@
         "id": "TV5DWDNosKzi",
         "outputId": "6306f698-ef57-429e-a917-b42dbe1fbe41"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4270,7 +4270,7 @@
       "metadata": {
         "id": "KqpwUhIDseKv"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4285,7 +4285,7 @@
       "metadata": {
         "id": "xmuztXI2soTe"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4333,7 +4333,7 @@
         "id": "tqhjWhGFszLo",
         "outputId": "db36e64a-68bf-41d1-9187-abca2d85c4f8"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4404,7 +4404,7 @@
         "id": "-aQHDqeAtAxZ",
         "outputId": "713c3e49-c002-4a22-8123-5a4009c10eb5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4442,7 +4442,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4476,7 +4476,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4495,7 +4495,7 @@
       "metadata": {
         "id": "F5A3FnMplq2B"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4506,7 +4506,7 @@
       "metadata": {
         "id": "uEc4VJpBgYrF"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4517,7 +4517,7 @@
       "metadata": {
         "id": "QmYvUSsvghRb"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4534,7 +4534,7 @@
       "metadata": {
         "id": "7Q2riNJVi2Wd"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4565,7 +4565,7 @@
       "metadata": {
         "id": "ADsYY6zXjEEF"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4581,7 +4581,7 @@
           "height": 81
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4722,7 +4722,7 @@
           "height": 81
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4865,7 +4865,7 @@
       "metadata": {
         "id": "O26JLiTrkTI5"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4896,7 +4896,7 @@
       "metadata": {
         "id": "J_O0LjVdkGg0"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4907,7 +4907,7 @@
       "metadata": {
         "id": "vIaarJw8kNbN"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4923,7 +4923,7 @@
           "height": 81
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5475,7 +5475,7 @@
       "metadata": {
         "id": "cb6idIh9lrUQ"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5486,7 +5486,7 @@
       "metadata": {
         "id": "AAvvs7MTwzqM"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5501,7 +5501,7 @@
       "metadata": {
         "id": "5KiyT3bplcfu"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5518,7 +5518,7 @@
       "metadata": {
         "id": "s-ucVzjDxdYk"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5566,7 +5566,7 @@
           ]
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5608,7 +5608,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5633,7 +5633,7 @@
       "metadata": {
         "id": "RrrCIyXBy68u"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5650,7 +5650,7 @@
           "height": 174
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5857,7 +5857,7 @@
           "height": 424
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6050,7 +6050,7 @@
           "height": 424
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6242,7 +6242,7 @@
           "height": 424
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6436,12 +6436,12 @@
       "cell_type": "code",
       "source": [
         "df_transpose['date'] = df_transpose['date'].str.replace('_total_precipitation','')\n",
-        "df_transpose['precipitation'] = df_transpose[0]"
+        "df_transpose['precipitation'] = df_transpose[0]*1000 # metros pra mm"
       ],
       "metadata": {
         "id": "x9X7T6xA0w9W"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6453,7 +6453,7 @@
       "metadata": {
         "id": "2XjoJ86e26ix"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6474,7 +6474,7 @@
           "height": 575
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
